--- a/src/html_erp.html
+++ b/src/html_erp.html
@@ -37,6 +37,9 @@
     <div class="container" id="main-cont">
 
     </div>
+    <div class="container" id="closeWindow">
+
+    </div>
   </main>
   <footer class="container-fluid">
     <div class="container">
@@ -58,8 +61,8 @@
 <script src="../js/erp_shop.js"></script>
 <script src="../js/erp_product.js"></script>
 <script src="../js/erp_init.js"></script>
+<script src="../js/bom_ProductWindows.js"></script>
 <script src="../js/dom_populate.js"></script>
 <script src="../js/dom_navDropDown.js"></script>
-<script src="../js/bom_ProductWindows.js"></script>
 <!--<script src="../js/erp_test.js"></script>-->
 </html>
